logs/Slang/chapter-8/8.19--global_constant.sv.log
name: global_constant
description: class with global constant variable
should_fail: 0
tags: 8.19
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--global_constant.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--global_constant.sv:8:2: error: language feature not yet supported
	class a_cls;
	^~~~~~~~~~~~
